test/libsolidity/syntaxTests/inlineAssembly/invalid/constant_access.sol
contract test {
    uint constant x = 1;
    function f() public pure {
        assembly {
            let y := x
        }
    }
}
// ----
